[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Transition/Transition.gd" type="Script" id=1]
[ext_resource path="res://resources/animated_textures/circle_out.tres" type="Texture" id=2]
[ext_resource path="res://resources/animated_textures/circle_in.tres" type="Texture" id=3]


[node name="CircleTransition" type="CanvasLayer"]
script = ExtResource( 1 )
circle_in = ExtResource( 3 )
circle_out = ExtResource( 2 )

[node name="Fading" type="TextureRect" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -96.0
margin_bottom = 96.0
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerIn" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="TimerOut" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
[connection signal="timeout" from="TimerIn" to="." method="_on_TimerIn_timeout"]
[connection signal="timeout" from="TimerOut" to="." method="_on_TimerOut_timeout"]
